Refactor portions to work with JDK 1.8